Adding ant and exact algorithm